# pytest-ditto

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  version_builder.py
.claude/skills/python-philosophy/: SKILL.md
.claude/skills/python-philosophy/references/: principles.md
.claude/skills/testing/: SKILL.md
.github/workflows/: ci.yml  docs.yml  pre-release-test.yml  release.yml
ditto/: __init__.py  _unittest.py  exceptions.py  marks.py  plugin.py  snapshot.py
ditto/io/: __init__.py  _json.py  _pandas_parquet.py  _pickle.py  _plugins.py  _protocol.py  _yaml.py  protocol.py
docs/: mkdocs.yml
docs/src/: getting-started.md  index.md
docs/src/cli/: clean.md  doctor.md  index.md  lint.md  list.md  prune.md  recorders.md  run.md  stats.md  status.md  update.md
docs/src/guides/: backends.md  custom-backends.md  custom-recorders.md  recorders.md  snapshot-fixture.md  unittest.md  upgrading.md
docs/src/reference/: backends.md  cli.md  ditto.md  exceptions.md  index.md  plugin.md  recorders.md  snapshot.md
examples/: .gitignore  README.md  conftest.py
examples/duckdb/: conftest.py  test_duckdb_target.py
examples/local/: pytest.ini  test_default_file_target.py  test_project_default_target.py
examples/postgres/: conftest.py  test_postgres_profile.py
examples/redis/: conftest.py  test_redis_target.py
src/ditto/: __init__.py  _cli_introspect.py  _lockfile.py  _manifest.py  _marks.py  _reconcile.py  _report.py  _theme.py  _unittest.py  _version.py  cli.py  exceptions.py  marks.py  plugin.py  snapshot.py
src/ditto/backends/: __init__.py  _fsspec.py  _local.py  _plugins.py  _prefix.py  _transform.py
src/ditto/io/: __init__.py  _json.py  _pandas_parquet.py  _pickle.py  _plugins.py  _protocol.py  _yaml.py
src/ditto/recorders/: __init__.py  _json.py  _pickle.py  _plugins.py  _protocol.py  _yaml.py
src/ditto_pandas/: __init__.py  io.py  marks.py
src/ditto_polars/: __init__.py  io.py  marks.py
src/ditto_utils/: __init__.py
tests/: test_again.py  test_another.py  test_main.py  test_no_decorator_mark.py  test_unittest.py
tests/asbvc/: test_again.py
tests/ci/: conftest.py  test_backends.py  test_cli.py  test_cli_commands.py  test_cli_introspect.py  test_cli_properties.py  test_fixture.py  test_fixture_no_record_mark.py  test_fixture_record_mark.py  test_fixture_usage.py  test_introspect.py  test_io.py  test_lockfile.py  test_lockfile_session.py  test_main.py  test_manifest.py  test_marks.py  test_pandas_plugin.py  test_plugin_helpers.py  test_plugins.py  test_profiles.py  test_pyarrow_plugin.py  test_readme.py  test_reconcile.py  test_recorder_properties.py  test_recorders.py  test_redis_backend.py  test_snapshot.py  test_snapshot_in_fixture.py  test_snapshot_key.py  test_snapshot_properties.py  test_unittest.py  test_usage.py  test_usage_examples.py  test_verify_session.py
tests/ci/.ditto/: test_returns_stored_value_on_subsequent_calls@read.pkl
tests/fixture_scoped_function/: test_fixture_function_scope.py
tests/fixture_scoped_module/: test_fixture_module_scope.py
tests/integration/: conftest.py  test_duckdb_backend.py  test_local_backend.py  test_postgres_backend.py  test_redis_backend.py
tests/integration/projects/duckdb_project/: conftest.py
tests/integration/projects/duckdb_project/tests/: scenario_suite.py
tests/integration/projects/local_project/: pytest.ini
tests/integration/projects/local_project/tests/: scenario_suite.py
tests/integration/projects/postgres_project/: conftest.py  pytest.ini
tests/integration/projects/postgres_project/tests/: scenario_suite.py
tests/integration/projects/redis_project/: conftest.py
tests/integration/projects/redis_project/tests/: scenario_suite.py
tests/integration/support/: backend_state.py  cli.py  docker.py
tests/multiple_snapshot_tests/: test_multiple_uses_of_snapshot_in_one_test.py
tests/nested_tests/: test_nested_module.py
