[project]
name = "pytest-ditto"
dynamic = [
    "version",
]
description = "Snapshot testing pytest plugin with minimal ceremony and flexible persistence formats."
keywords = ["pytest" , "testing"]
authors = [{ name = "Lachlan Taylor", email = "lachlanbtaylor@proton.me" }]
maintainers = [{ name = "Lachlan Taylor", email = "lachlanbtaylor@proton.me" }]
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest>=3.5.0",
    "pyyaml",
]
[project.optional-dependencies]
pandas = ["pytest-ditto-pandas"]
pyarrow = ["pytest-ditto-pyarrow"]
dev = [
    "pre-commit",
    "hatch>=1.9.4",
    "hatch-vcs>=0.4.0",
]

[project.entry-points.pytest11]
recording = "ditto.plugin"

[project.entry-points.ditto]
pickle = "ditto.io._pickle:Pickle"
yaml = "ditto.io._yaml:Yaml"
json = "ditto.io._json:Json"

[project.entry-points.ditto_marks]
# placeholder for ditto IO plugins to use to register marks.


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch.build]
hooks.vcs.version-file = "src/ditto/_version.py"
hooks.vcs.template = "__version__ = {version!r}"
targets.wheel.packages = ["src/ditto"]
targets.wheel.strict-naming = false
targets.sdist.packages = ["src/ditto"]
targets.sdist.strict-naming = false

[tool.hatch.version]
source = "code"
path = "version_builder.py"
expression = "_version()"


[tool.hatch.envs.default]
python = "3.10"
dependencies = [
  "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests/ci}"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]


[tool.pytest.ini_options]
minversion = "8.3"
testpaths = "tests/ci"
addopts = [
  "-lv",
  "--tb=short",
  "--color=yes",
  "--code-highlight=yes",
  "--junit-xml=.pytest/test-results.xml",
]
junit_family = "xunit2"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]


[tool.coverage.run]
branch = true
source = ["src/ditto"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
preview = true
src = ["src/ditto"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "PERF", "W"]
ignore = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pytest-ditto = { path = ".", editable = true }

[tool.pixi.feature.lint.dependencies]
pre-commit = ">=4.0.1,<5"
ruff = ">=0.8.4,<1"

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3,<9"
pytest-cov = ">=6.0,<7"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py312.tasks]
test = "pytest"
test-cov = "pytest --cov=ditto --cov-report=html --cov-report=term --cov-report=xml"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.py314.tasks]
test = "pytest"
test-cov = "pytest --cov=ditto --cov-report=html --cov-report=term --cov-report=xml"

[tool.pixi.feature.build.dependencies]
uv = ">=0.5"

[tool.pixi.feature.build.tasks]
build = "uv build --sdist && uv build --wheel"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
pandas = { features = ["pandas"], solve-group = "default" }
pyarrow = { features = ["pyarrow"], solve-group = "default" }
lint = { features = ["lint"] }
py312 = { features = ["py312", "test"] }
py314 = { features = ["py314", "test"] }
build = { features = ["build"] }

[tool.pixi.tasks]
